# GenVibeCoders

./: .gitignore  package-lock.json  package.json  vite.config.ts
aiserver/tripmate/: README.md  agent.py  prompt.py
aiserver/tripmate/profiles/: itinerary_empty_default.json
aiserver/tripmate/tools/: airportIATATool.py  flightSearchTool.py  hotelSearchTool.py  memory.py  stationCodeTool.py
backend/: base_llm.py  main.py  output.md  output.txt  pyproject.toml  requirements.txt  state.py
backend/app/agents/: orchestrator.py
backend/app/models/: plan_trip_llm_request.py  plan_trip_request.py
backend/app/routes/: trip.py
backend/app/services/: ai_agents.py  itenerary.py
backend/nodes/: accomodation.py  airports.py  orchestrator.py  places.py  root.py  routes.py  scheduler.py  synthesizer.py  transport.py
backend/nodes/hotel_agent/: agent.py  prompt.py
backend/nodes/transport/: agent.py
backend/nodes/transport_agent/: agent.py  prompt.py
backend/tools/: airports_tool.py  flightSearchTool.py  gather_places.py  hotelSearchTool.py  routing_tool.py  schedule_tool.py  trainSearchTool.py
backend/tools/fallbacks/: travel_impact.py
backend/types/: decision_request.py
notebooks/: ortools.ipynb  pyproject.toml  vertexwithlangchain.ipynb
srv/: package-lock.json  package.json
srv/src/auth/: login.js  logout.js  signup.js
srv/src/firebase/: config.js  firebaseConfig.json
ui/: README.md  package-lock.json  package.json  tsconfig.json
ui/src/app/: layout.tsx  page.tsx
ui/src/auth/: trackAuthState.js
ui/trip-planner/: package.json
(+15 files in other folders)
