[project]
name = "notebooks"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.3",
    "googlemaps>=4.10.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-vertexai>=2.1.0",
    "ortools>=9.14.6206",
]
